Hide lookup/versions on mobile resolutions, rescale buttons, fix iOS scrolling

--- a/files/css/files.css
+++ b/files/css/files.css
@@ -14,6 +14,10 @@
 	padding: 5px;
 }
 
+#moreInfoModal{
+	-webkit-overflow-scrolling: touch;
+}
+
 /* Mobile Devices */
 @media screen and (max-width: 767px) {
 	#files_length{
@@ -26,9 +30,39 @@
 		margin-bottom: .5em;
 		top: 0;
 		left: 0;
+		width: 100%;
 	}
-	
+
 	#files_buttons > .btn {
 		margin-bottom: .25em;
+		width: 100%;
+		margin-right: 5px;
+	}
+
+	#files_buttons .btn{
+		line-height: 1;
+		font-size: 0.8rem;
+	}
+
+	.dropdown-toggle-split{
+		max-width: 50px;
+	}
+
+	#files tr td:nth-child(2) {
+		max-width: 200px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	#files tr td:nth-child(2):hover {
+		max-width: 200px;
+		white-space: nowrap;
+		overflow-x: scroll;
+		text-overflow: initial;
+	}
+
+	#files tr th:nth-child(3), #files tr td:nth-child(3), #files tr th:nth-child(4), #files tr td:nth-child(4) {
+		display: none;
 	}
 }
